...
            "state" : "translated",
            "value" : "Ngày tạo"
          }
        }
      }
    },
    "Delete" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Delete"
          }
...
            "state" : "translated",
            "value" : "Nhập mô tả vấn đề"
          }
        }
      }
    },
    "Enter the issue title here" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Enter the issue title here"
          }
...
            "state" : "translated",
            "value" : "Nhập tiêu đề vấn đề"
          }
        }
      }
    },
    "Filter" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Filter"
          }
...
            "state" : "translated",
            "value" : "Lọc vấn đề hoặc nhấp # đê thêm thẻ"
          }
        }
      }
    },
    "Filters" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Filters"
...
            "state" : "translated",
            "value" : "Bộ lọc"
          }
        }
      }
    },
    "High" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "High"
          }
...
            "state" : "translated",
            "value" : "Ưu tiên cao"
          }
        }
      }
    },
    "Issues" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Issues"
          }
...
            "state" : "translated",
            "value" : "Các vấn đề"
          }
        }
      }
    },
    "Locked" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Locked"
          }
...
            "state" : "translated",
            "value" : "Vấn đề mới"
          }
        }
      }
    },
    "New Issue" : {
      "comment" : "Create a new issue",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Recent Issues"
...
            "state" : "translated",
            "value" : "Không có vấn đề nào được chọn"
          }
        }
      }
    },
    "OK" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "OK"
          }
...
            "state" : "translated",
            "value" : "Đổi tên thẻ"
          }
        }
      }
    },
    "Show awards" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Show awards"
          }
...
